# AIAD

./: .env.example  .gitignore  README.md  environment.aiad.yml  langgraph_settings.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.trae/rules/: project-rule.md
ai_logs/autologs/: 2026-03-30-001.md  2026-03-30-002.md  2026-03-30-003.md  2026-03-30-004.md  2026-03-30-005.md  2026-03-30-006.md  2026-03-30-007.md  2026-03-30-008.md  2026-03-30-009.md  2026-03-30-010.md  2026-03-30-011.md  2026-03-30-012.md  2026-03-30-013.md  2026-03-30-014.md  2026-03-31-001.md  2026-03-31-002.md  2026-03-31-003.md  2026-03-31-004.md  2026-03-31-005.md  2026-03-31-006.md  2026-03-31-007.md  2026-04-04-001.md  2026-04-04-002.md  2026-04-06-001.md  2026-04-06-002.md  2026-04-06-003.md  2026-04-11-001.md  2026-04-11-002.md  2026-04-14-001.md  2026-04-14-002.md  2026-04-18-001.md
app/: main.py
app/api/: routes.py
app/core/: config.py  logging_config.py
app/models/: schemas.py
app/services/: agent3_context_nlp.py  analyzer.py  chroma_store.py  context_agent.py  vision.py  (+8 more)
docs/: AIAD_实验方案与团队协作报告.md  智能体接口与并行开发规范.md  项目分工与路线规划.md
frontend/: .env.example  index.html  main.js  package-lock.json  package.json  tsconfig.app.json  vitest.config.ts
scripts/: bootstrap_agent4.ps1  bootstrap_agent4.py  dev.ps1  format_data_for_agents.py  setup_conda_envs.sh  test_crawler.py
tests/: langgraph_test.py  test_api_validation.py  test_copywriter.py  test_data_pipeline.py  test_llm_gateway.py  test_normalize.py  test_routes_helpers.py  test_task_store.py  test_vision_agent.py
(+41 files in other folders)
